--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.13.15",
+    "slugify": "^1.6.5"
   },
   "engines": {
     "node": "16.18.0"
