--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "debug": "ndb server.js"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
@@ -14,5 +16,9 @@
   },
   "engines": {
     "node": "16.18.0"
+  },
+  "devDependencies": {
+    "ndb": "^1.1.5",
+    "nodemon": "^2.0.20"
   }
 }
