--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "debug": "ndb server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.13.15",
-    "slugify": "^1.6.5"
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.5",
+    "validator": "^13.9.0"
   },
   "engines": {
     "node": "16.18.0"
