--- a/package.json
+++ b/package.json
@@ -6,20 +6,25 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.0",
-    "helmet": "^6.0.1",
+    "helmet": "^3.23.3",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.13.15",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
+    "pug": "^3.0.2",
     "slugify": "^1.6.5",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
@@ -29,6 +34,7 @@
   },
   "devDependencies": {
     "ndb": "^1.1.5",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "parcel-bundler": "^1.12.5"
   }
 }
