--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "nodemon server.js",
     "start": "node server.js",
     "debug": "ndb server.js",
-    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url .",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url ."
   },
   "dependencies": {
     "axios": "^1.3.3",
@@ -29,6 +29,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.31.3",
     "slugify": "^1.6.5",
+    "stripe": "^11.11.0",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   },
